AppNote with render3

--- a/backend/.env
+++ b/backend/.env
@@ -8,4 +8,4 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://notesdb_k0cw_user:ZdB6InQG3lSEcDNkIIZ5agyaIE3FY37c@dpg-d22jq8p5pdvs7392smsg-a.oregon-postgres.render.com/notesdb_k0cw"
+DATABASE_URL="postgresql://notesdb_k0cw_user:ZdB6InQG3lSEcDNkIIZ5agyaIE3FY37c@dpg-d22jq8p5pdvs7392smsg-a/notesdb_k0cw"
